tests/paczka1/fuzzy1/83613796.err
Error in line 7: eUPaI7jlJRs A120 45,98
Error in line 8: gPv0 A213 3,76
Error in line 3: ZPPjK70 A213 37,3
Error in line 18: QBdcujIXF A213 23,48
Error in line 19: QBdcujIXF A213 51,6
Error in line 24: A213 A61 16,0
Error in line 26: ZPPjK70 A213 86,1
Error in line 37: A213 A120 36,0
